--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Petsittingapp</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
-  <nav class="navbar">
+</head>
+<body>
+  <header>
+    <nav class="navbar">
       <div class="logo">DogWalkingSarajevo</div>
       <ul class="nav-links" id="navLinks">
         <li><a href="#home">Home</a></li>
@@ -16,7 +19,6 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="reservation.html">Reserve</a></li>
         <li><a href="reviews.html">Reviews</a></li>
-
         <!-- OVO su ID-evi koje koristi script.js -->
         <li><a id="navLogin" href="login.html">Login</a></li>
         <li><a id="navLogout" href="#" style="display:none">Logout</a></li>
@@ -101,7 +103,9 @@
     </div>
   </footer>
 
-  <!-- ZAJEDNIČKI SCRIPT MORA IĆI NA DNU -->
+  <!-- ZAJEDNIČKI SCRIPT NA DNU -->
+  <script src="toast.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+``
