--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="auth-page">
+  <header style="text-align: center; padding: 20px 0;">
+    <a href="index.html" class="logo" style="text-decoration: none; color: inherit; font-size: 1.5rem; font-weight: 600;">DogWalkingSarajevo</a>
+  </header>
 
   <main class="auth-card">
     <h2>Prijava</h2>
