Reviews bug fix

--- a/reviews.html
+++ b/reviews.html
@@ -93,9 +93,9 @@
   </footer>
 
   <!-- Skripte (redoslijed: prvo app, zatim i18n) -->
-  <script src="toast.js"></script>
-  <script src="script.js"></script>
-  <script src="reviews.js"></script>
-  <script src="i18n.js"></script>
+  <script src="toast.js" defer></script>
+  <script src="script.js" defer></script>
+  <script src="reviews.js" defer></script>
+  <script src="i18n.js" defer></script>
 </body>
 </html>
