--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
         <div class="option-card"
              data-image="Images/homevisit.png"
              onclick="redirectToReservation('homevisit', this)">
-          <img src="PetSittingImages/PetSitting10.jpg" alt="Home Visits" class="option-image">
+          <img src="Images/homevisit.png" alt="Home Visits" class="option-image">
           <h3>Home Visits</h3>
         </div>
         <div class="option-card"
              data-image="Images/petwalking.png"
              onclick="redirectToReservation('petwalking', this)">
-          <img src="PetSittingImages/PetSitting4.jpg" alt="Pet Walking" class="option-image">
+          <img src="Images/petwalking.png" alt="Pet Walking" class="option-image">
           <h3>Pet Walking</h3>
         </div>
       </div>
