--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           Reliable walks. Loving care. Stress-free service.
           We keep your pets happy, active, and comfortable while you’re busy or away.
         </p>
-        <a href="#cta" class="btn">Reserve</a>
+        <a href="reservation.html" class="btn">Reserve</a>
       </div>
 
       <div class="service-options">
