--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
              data-image="Images/homevisit.png"
              onclick="redirectToReservation('homevisit', this)">
           <img src="PetSittingImages/PetSitting10.jpg" alt="Home Visits" class="option-image">
-          <h3>Home Visits</h3>
+          <h3 id="hero-home-visits">Home Visits</h3>
         </div>
         <div class="option-card"
              data-image="Images/petwalking.png"
              onclick="redirectToReservation('petwalking', this)">
           <img src="PetSittingImages/PetSitting4.jpg" alt="Pet Walking" class="option-image">
-          <h3>Pet Walking</h3>
+          <h3 id="hero-pet-walking">Pet Walking</h3>
         </div>
       </div>
     </div>
