--- a/index.html
+++ b/index.html
@@ -166,7 +166,14 @@
       <button class="tab-btn" data-category="walks">Šetnje</button>
       <button class="tab-btn" data-category="care">Njega</button>
     </div>
-    <div class="gallery-grid">
+    <div class="gallery-carousel">
+      <button class="carousel-btn carousel-prev" aria-label="Previous">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M15 18l-6-6 6-6"/>
+        </svg>
+      </button>
+      <div class="gallery-track-container">
+        <div class="gallery-grid">
       <div class="gallery-item" data-category="care">
         <img src="PetSittingImages/PetSitting1.jpg" alt="Pet Sitting 1">
       </div>
@@ -242,6 +249,13 @@
       <div class="gallery-item" data-category="walks">
         <img src="PetSittingImages/PetSitting25.jpg" alt="Pet Sitting 25">
       </div>
+        </div>
+      </div>
+      <button class="carousel-btn carousel-next" aria-label="Next">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M9 18l6-6-6-6"/>
+        </svg>
+      </button>
     </div>
   </section>
 
